--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,47 +1,56 @@
 .footer {
-    background-color: $color-accent;
+  background-color: $color-accent;
 
-    &-content {
-        @extend %section;
+  &-content {
+    @extend %section;
 
-        &__copirait {
-            text-align: center;
-            padding-top: $gap * 4;
-            color: $color-main;
-        }
+    &__copirait {
+      padding-top: $gap * 4;
+
+      text-align: center;
+
+      color: $color-main;
     }
+  }
 
-    &-social {
-        display: flex;
-        justify-content: center;
+  &-social {
+    display: flex;
+    justify-content: center;
 
-        &__item {
-            margin: $gap / 2;
-            border: 1px solid $color-main;
-            border-radius: 50%;
-            padding: 5px;
-            width: 30px;
-            height: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            transition: background-color .3s, color .3s;
+    &__item {
+      position: relative;
 
-            &:hover {
-                background-color: $color-main;
-                color: $color-accent;
-            }
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-            &:nth-child(2)::after {
-                position: absolute;
-                content: "";
-                left: $gap;
-                bottom: -$gap * 2.5;
-                width: 50px;
-                height: 2px;
-                background-color: $color-main;
-            }
-        }
+      width: 30px;
+      height: 30px;
+      margin: $gap / 2;
+      padding: 5px;
+
+      transition: background-color 0.3s, color 0.3s;
+
+      border: 1px solid $color-main;
+      border-radius: 50%;
+
+      &:hover {
+        color: $color-accent;
+        background-color: $color-main;
+      }
+
+      &:nth-child(2)::after {
+        position: absolute;
+        bottom: -$gap * 2.5;
+        left: $gap;
+
+        width: 50px;
+        height: 2px;
+
+        content: "";
+
+        background-color: $color-main;
+      }
     }
+  }
 }
