--- a/assets/scss/_skin.scss
+++ b/assets/scss/_skin.scss
@@ -1,4 +1,4 @@
-$color-main:#fff;
+$color-main: #ffffff;
 $color-main-dark: #f8f8f8;
 $color-text: #555555;
-$color-accent:#c0301c;
+$color-accent: #c0301c;
