--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1,7 +1,7 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 
@@ -15,10 +15,11 @@ h1 {
 }
 
 h2 {
+  text-transform: uppercase;
+
   font-family: Montserrat;
   font-size: 1.25rem;
   font-weight: normal;
-  text-transform: uppercase;
 }
 
 h3 {
@@ -27,15 +28,16 @@ h3 {
 }
 
 p {
+  color: $color-text;
+
   font-family: Roboto Slab;
   font-weight: normal;
-  color: $color-text;
 }
 
 a {
   text-decoration: none;
-  color: $color-main;
 
+  color: $color-main;
 }
 
 ul {
@@ -49,91 +51,110 @@ ul {
 
 .preloader {
   position: fixed;
+  z-index: 9999;
   top: 0;
   left: 0;
-  background: #000;
+
+  display: flex;
+  visibility: visible;
+  align-items: center;
+  justify-content: center;
+
   width: 100%;
   height: 100%;
-  display: flex;
-  z-index: 9999;
-  justify-content: center;
-  align-items: center;
-  opacity: 1;
-  visibility: visible;
+
   transition: all 0.7s;
+
+  opacity: 1;
+  background: #000000;
 
   &-wrap {
     position: relative;
-    width: 150px;
 
+    width: 150px;
     height: 150px;
 
 
 
     &::after {
-      content: "";
-      width: 100%;
-      height: 100%;
       position: absolute;
-      border-radius: 50%;
       // background: radial-gradient(rgb(196, 127, 15), rgba(11, 7, 248, 0.637));
       z-index: 1;
+
+      width: 100%;
+      height: 100%;
+
+      content: "";
+
+      border-radius: 50%;
       // box-shadow: 1px 0px 221px 21px rgb(11, 7, 248);
     }
   }
 
   &-item {
-    z-index: 3;
     position: absolute;
+    z-index: 3;
+
     width: 100%;
     height: 100%;
+
     border-radius: 50%;
 
     &:nth-child(1) {
-      animation: 3s preload-child__1 linear infinite;
-      border: 5px solid rgb(246, 246, 247);
-      border-bottom-color: transparent;
-      width: 60%;
-      height: 60%;
       top: 30px;
       left: 30px;
+
+      width: 60%;
+      height: 60%;
+
+      animation: 3s preload-child__1 linear infinite;
+
+      border: 5px solid rgb(246, 246, 247);
+      border-bottom-color: transparent;
     }
 
     &:nth-child(2) {
-      animation: 3s preload-child__2 linear infinite;
-      border: 5px solid rgb(255, 0, 0);
-      border-bottom-color: transparent;
-      width: 80%;
-      height: 80%;
       top: 15px;
       left: 15px;
+
+      width: 80%;
+      height: 80%;
+
+      animation: 3s preload-child__2 linear infinite;
+
+      border: 5px solid rgb(255, 0, 0);
+      border-bottom-color: transparent;
     }
 
     &:nth-child(3) {
       animation: 3s preload-child__3 linear infinite;
+
       border: 5px solid rgb(38, 0, 253);
       border-top-color: transparent;
     }
 
     &:nth-child(4) {
-      width: 40%;
-      height: 40%;
       top: 45px;
       left: 45px;
-      animation: 4s preload-child__4 linear infinite;
-      border: 5px solid rgb(42, 253, 0);
-      box-shadow: 0px 0px 143px 32px red;
-    }
 
+      width: 40%;
+      height: 40%;
+
+      animation: 4s preload-child__4 linear infinite;
+
+      border: 5px solid rgb(42, 253, 0);
+      box-shadow: 0 0 143px 32px red;
+    }
   }
 
   &.done {
-    opacity: 0;
     visibility: hidden;
+
+    opacity: 0;
   }
 }
 
-.slick-slide{
+.slick-slide {
   outline: none;
 }
 
