--- a/assets/scss/_extends.scss
+++ b/assets/scss/_extends.scss
@@ -1,97 +1,96 @@
 %container {
-    max-width: $xl;
-    margin: 0 auto;
-    padding-right: $gap;
-    padding-left: $gap;
+  max-width: $xl;
+  margin: 0 auto;
+  padding-right: $gap;
+  padding-left: $gap;
 }
 
 ;
 
 %section {
-    @include ul-min {
-        padding-top: $gap * 5;
-        padding-bottom: $gap * 5;
-    }
-
-    @include ul-xl {
-        padding-top: $gap * 4;
-        padding-bottom: $gap * 4;
-    }
-
-    @include lg-md {
-        padding-top: $gap * 4;
-        padding-bottom: $gap * 4;
-    }
-
-    @include xl-lg {
-        padding-top: $gap * 4;
-        padding-bottom: $gap * 4;
-    }
-
-    @include md {
-        padding-top: $gap * 2;
-        padding-bottom: $gap * 2;
-    }
-
-    @include sm {
-        padding-top: $gap * 2;
-        padding-bottom: $gap * 2;
-    }
-
-    @include xx {
-        padding-top: $gap * 2;
-        padding-bottom: $gap * 2;
-    }
-
+  @include xx {
+    padding-top: $gap * 2;
+    padding-bottom: $gap * 2;
+  }
+  @include sm {
+    padding-top: $gap * 2;
+    padding-bottom: $gap * 2;
+  }
+  @include md {
+    padding-top: $gap * 2;
+    padding-bottom: $gap * 2;
+  }
+  @include xl-lg {
+    padding-top: $gap * 4;
+    padding-bottom: $gap * 4;
+  }
+  @include lg-md {
+    padding-top: $gap * 4;
+    padding-bottom: $gap * 4;
+  }
+  @include ul-xl {
+    padding-top: $gap * 4;
+    padding-bottom: $gap * 4;
+  }
+  @include ul-min {
+    padding-top: $gap * 5;
+    padding-bottom: $gap * 5;
+  }
 }
 
 %title-section {
-    position: relative;
-    text-align: center;
-    padding-bottom: $gap * 3;
+  position: relative;
 
-    &::before {
-        content: "";
-        position: absolute;
-        top: 50px;
-        left: 50%;
-        width: 50px;
-        height: 2px;
-        transform: translate(-50%, -50%);
-        background-color: #000;
-    }
+  padding-bottom: $gap * 3;
+
+  text-align: center;
+
+  &::before {
+    position: absolute;
+    top: 50px;
+    left: 50%;
+
+    width: 50px;
+    height: 2px;
+
+    content: "";
+    transform: translate(-50%, -50%);
+
+    background-color: #000000;
+  }
 }
 
 %btn-accent {
-    
-    .btn {
-        max-width: 180px;
-        max-height: 50px;
-        padding: $gap 10px;
-        border-radius: 2px;
-        border: 2px solid #fff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: color .3s, background-color .3s;
-        margin: 0 auto;
-        &:hover {
-            color: #c0301c;
-            background-color: #fff;
-    }
-    @include lg-md {
-            font-size: .875rem;
-    }
+  .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-    @include md-sm {
-            font-size: .875rem;
-    }
+    max-width: 180px;
+    max-height: 50px;
+    margin: 0 auto;
+    padding: $gap 10px;
+
+    transition: color 0.3s, background-color 0.3s;
+
+    border: 2px solid #ffffff;
+    border-radius: 2px;
 
     @include xx {
-            font-size: .875rem;
-            padding: 10px 0;
-            width: 120px;
+      width: 120px;
+      padding: 10px 0;
+
+      font-size: 0.875rem;
     }
+    @include md-sm {
+      font-size: 0.875rem;
+    }
+    @include lg-md {
+      font-size: 0.875rem;
     }
-   
+    &:hover {
+      color: #c0301c;
+      background-color: #ffffff;
+    }
+  }
 }
