--- a/assets/scss/sections/_about.scss
+++ b/assets/scss/sections/_about.scss
@@ -1,173 +1,183 @@
 .about {
-    background-color: $color-main-dark;
+  background-color: $color-main-dark;
 
-    h4 {
-        display: none;
+  h4 {
+    display: none;
+  }
+
+  &-content {
+    text-align: center;
+
+    @extend %section;
+
+    &__title {
+      @extend %title-section;
     }
 
-    &-content {
-        @extend %section;
-        text-align: center;
+    &__subtitle {
+      padding-top: $gap * 3;
 
-        &__title {
-            @extend %title-section;
-        }
-
-        &__subtitle {
-            padding-top: $gap * 3;
-
-            @include md {
-                padding-top: $gap * 2;
-            }
-        }
-
-        &__text {
-            padding-top: $gap * 4;
-            display: flex;
-            margin-left: -15px;
-            margin-right: -15px;
-            text-align: left;
-
-            @include md {
-                flex-wrap: wrap;
-                padding-top: $gap * 2;
-            }
-
-            &-item {
-                padding: 0 $gap;
-                font-size: 0.875rem;
-                line-height: 1.5rem;
-
-                @include md {
-                    padding: $gap $gap 0 $gap;
-                }
-            }
-        }
+      @include md {
+        padding-top: $gap * 2;
+      }
     }
 
-    &-carusel {
-        margin-left: -10px;
-        margin-right: -9px;
+    &__text {
+      display: flex;
 
-        &:hover {
+      margin-right: -15px;
+      margin-left: -15px;
+      padding-top: $gap * 4;
 
-            .slick-arrow {
-                opacity: 1;
-            }
+      text-align: left;
+
+      @include md {
+        flex-wrap: wrap;
+
+        padding-top: $gap * 2;
+      }
+
+      &-item {
+        padding: 0 $gap;
+
+        font-size: 0.875rem;
+        line-height: 1.5rem;
+
+        @include md {
+          padding: $gap $gap 0 $gap;
         }
+      }
+    }
+  }
 
-        .slick-arrow {
-            background: darken($color-main-dark, 76);
-            top: 50%;
-            opacity: 0;
-            padding: 10px 15px;
-            transform: translateY(-25%);
-            position: absolute;
-            color: $color-main;
-            transition: background-color .3s, color .3s, opacity .4s;
-            z-index: 1;
+  &-carusel {
+    margin-right: -9px;
+    margin-left: -10px;
 
-            @include md-sm {
-                transform: translateY(-50%);
-            }
-
-            &:hover {
-                background-color: $color-accent;
-                color: #000;
-            }
-        }
-
-        .fa-chevron-right {
-          right: 7px;
-          @include lg {
-            right: 9px;
-        }
-        
-        @include sm {
-            right: 10px;
-        }
-        }
-
-        .fa-chevron-left {
-            left: 10px;
-        }
-
-
-
-        &__item {
-            margin: 0 $gap / 1.5;
-            margin-top: 70px;
-
-            img {
-                display: block;
-                width: 100%;
-            }
-
-            @include ul-min {
-                flex: 0 0 25%;
-            }
-
-            @include ul-lg {
-                flex: 0 0 25%;
-            }
-
-            @include lg-md {
-                flex: 0 0 33.333%;
-            }
-
-            @include md {
-                flex: 0 0 50%;
-            }
-
-            @include sm {
-                flex: 0 0 100%;
-            }
-
-        }
-
-        &__overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            transition: background 1s;
-        }
+    &:hover {
+      .slick-arrow {
+        opacity: 1;
+      }
     }
 
-    &-image {
-        position: relative;
-        margin-bottom: $gap;
+    .slick-arrow {
+      position: absolute;
+      z-index: 1;
+      top: 50%;
 
-        &:hover {
-            .about-social {
-                opacity: 1;
-            }
+      padding: 10px 15px;
 
-            .about-carusel__overlay {
-                background-color: rgba(#000, .5);
-            }
-        }
+      transition: background-color 0.3s, color 0.3s, opacity 0.4s;
+      transform: translateY(-25%);
+
+      opacity: 0;
+      color: $color-main;
+      background: darken($color-main-dark, 76);
+
+      @include md-sm {
+        transform: translateY(-50%);
+      }
+
+      &:hover {
+        color: #000000;
+        background-color: $color-accent;
+      }
     }
 
-    &-social {
-        position: absolute;
-        left: 25%;
-        bottom: 15%;
-        opacity: 0;
-        transition: opacity .8s;
-        @include sm {
-            left: 30%;
-        }
-        &__item {
-            padding: 5px 7.5px;
-            font-size: 1.3rem;
-            transition: background .3s;
-           
-            &:hover {
-                background: $color-accent;
-            }
-        }
+    .fa-chevron-right {
+      right: 7px;
+
+      @include sm {
+        right: 10px;
+      }
+      @include lg {
+        right: 9px;
+      }
     }
 
+    .fa-chevron-left {
+      left: 10px;
+    }
+
+
+
+    &__item {
+      margin: 0 $gap / 1.5;
+      margin-top: 70px;
+
+      @include sm {
+        flex: 0 0 100%;
+      }
+      @include md {
+        flex: 0 0 50%;
+      }
+      @include lg-md {
+        flex: 0 0 33.333%;
+      }
+      @include ul-lg {
+        flex: 0 0 25%;
+      }
+      @include ul-min {
+        flex: 0 0 25%;
+      }
+
+      img {
+        display: block;
+
+        width: 100%;
+      }
+    }
+
+    &__overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      width: 100%;
+      height: 100%;
+
+      transition: background 1s;
+    }
+  }
+
+  &-image {
+    position: relative;
+
+    margin-bottom: $gap;
+
+    &:hover {
+      .about-social {
+        opacity: 1;
+      }
+
+      .about-carusel__overlay {
+        background-color: rgba(#000000, 0.5);
+      }
+    }
+  }
+
+  &-social {
+    position: absolute;
+    bottom: 15%;
+    left: 25%;
+
+    transition: opacity 0.8s;
+
+    opacity: 0;
+
+    @include sm {
+      left: 30%;
+    }
+    &__item {
+      padding: 5px 7.5px;
+
+      transition: background 0.3s;
+
+      font-size: 1.3rem;
+
+      &:hover {
+        background: $color-accent;
+      }
+    }
+  }
 }
