--- a/assets/scss/sections/_blog.scss
+++ b/assets/scss/sections/_blog.scss
@@ -1,123 +1,146 @@
 .blog {
-    background-color: $color-main;
-h4{
+  background-color: $color-main;
+  h4 {
     display: none;
-}
-    &-content {
-        @extend %section;
+  }
+  &-content {
+    text-align: center;
+
+    @extend %section;
+
+    &__title {
+      @extend %title-section;
+    }
+
+    &__item {
+      position: relative;
+
+      display: flex;
+
+      padding-top: $gap * 5;
+
+      @include md {
+        flex-direction: column;
+      }
+      &:nth-of-type(2)::after {
+        position: absolute;
+        top: 37px;
+        left: 0;
+
+        width: 100%;
+        height: 1.5px;
+
+        content: "";
+
+        background: darken($color-main-dark, 8);
+      }
+
+      p {
+        text-align: left;
+
+        font-size: 0.875rem;
+      }
+    }
+  }
+
+  &-image {
+    margin-right: 38px;
+
+    @include md {
+      width: 100%;
+    }
+    img {
+      @include md {
+        width: 100%;
+      }
+    }
+  }
+
+  &-text {
+    &__description {
+      display: flex;
+      align-items: center;
+
+      padding-bottom: $gap * 1.5;
+    }
+
+    &__date {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      width: 76px;
+      height: 76px;
+      margin-right: $gap * 1.5;
+      padding: 20px;
+
+      border: 2px solid rgb(102, 101, 101);
+
+      p {
         text-align: center;
 
-        &__title {
-            @extend %title-section;
-        }
+        color: rgb(124, 122, 122);
 
-        &__item {
-            display: flex;
-
-            padding-top: $gap * 5;
-            position: relative;
-            @include md {
-              flex-direction: column;
-            }
-            &:nth-of-type(2)::after {
-                content: "";
-                position: absolute;
-                top: 37px;
-                left: 0;
-                width: 100%;
-                height: 1.5px;
-                background: darken($color-main-dark, 8)
-            }
-
-            p {
-                text-align: left;
-                font-size: 0.875rem;
-            }
-        }
+        font-family: $font-header;
+        font-size: 1.25rem;
+        font-weight: bold;
+      }
     }
 
-    &-image {
-        margin-right: 38px;
-        @include md {
-            width: 100%;
-        }
-        img{
-            @include md {
-                width: 100%;
-            }
-        }
+    &__title {
+      text-align: left;
+
+      h3 {
+        padding-bottom: 5px;
+
+        color: $color-accent;
+
+        font-size: 1rem;
+      }
+
+      p {
+        padding-top: 5px;
+
+        font-size: 0.875rem;
+      }
+
+      span {
+        color: $color-accent;
+      }
     }
 
-    &-text {
-        &__description {
-            display: flex;
-            align-items: center;
-            padding-bottom: $gap * 1.5;
+    &__button {
+      display: flex;
+      align-items: center;
+
+      width: 180px;
+      height: 30px;
+      margin-top: $gap * 1.5;
+
+      transition: border-bottom 0.4s, padding-left 0.8s, color 0.3s;
+
+      border: 2px solid transparent;
+
+      backface-visibility: hidden;
+
+      a {
+        text-transform: uppercase;
+
+        color: rgb(124, 122, 122);
+
+        font-size: 0.875rem;
+        font-weight: bold;
+      }
+
+      &:hover {
+        padding-left: 45px;
+
+        border-bottom: 2px solid $color-accent;
+
+        a {
+          color: $color-accent;
         }
-
-        &__date {
-            width: 76px;
-            height: 76px;
-            border: 2px solid rgb(102, 101, 101);
-            display: flex;
-            margin-right: $gap * 1.5;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-
-            p {
-                text-align: center;
-                font-family: $font-header;
-                font-weight: bold;
-                font-size: 1.25rem;
-                color: rgb(124, 122, 122);
-            }
-        }
-
-        &__title {
-            text-align: left;
-
-            h3 {
-                padding-bottom: 5px;
-                font-size: 1rem;
-                color: $color-accent;
-            }
-
-            p {
-                font-size: 0.875rem;
-                padding-top: 5px;
-            }
-
-            span {
-                color: $color-accent;
-            }
-        }
-
-        &__button {
-            display: flex;
-            margin-top: $gap * 1.5;
-            align-items: center;
-            width: 180px;
-            height: 30px;
-            border: 2px solid transparent;
-            transition: border-bottom .4s, padding-left .8s, color .3s;
-            backface-visibility: hidden;
-
-            a {
-                color: rgb(124, 122, 122);
-                font-weight: bold;
-                font-size: .875rem;
-                text-transform: uppercase;
-            }
-
-            &:hover {
-                padding-left: 45px;
-                border-bottom: 2px solid $color-accent;
-
-                a {
-                    color: $color-accent;
-                }
-            }
-        }
+      }
     }
+  }
 }
