--- a/assets/scss/sections/_contact.scss
+++ b/assets/scss/sections/_contact.scss
@@ -1,221 +1,236 @@
 .contact {
-    background-color: $color-main;
+  background-color: $color-main;
 
-    h4 {
-        display: none;
+  h4 {
+    display: none;
+  }
+
+  &-content {
+    text-align: center;
+
+    @extend %section;
+
+    &__title {
+      @extend %title-section;
     }
 
-    &-content {
-        @extend %section;
+    &__subtitle {
+      @include sm {
+        font-size: 0.875rem;
+      }
+    }
+  }
+
+  &-block {
+    display: flex;
+    justify-content: center;
+
+    padding-top: $gap * 5;
+
+    @include md {
+      flex-direction: column;
+      justify-content: center;
+    }
+    @include lg-md {
+      justify-content: center;
+    }
+
+    &__information {
+      width: 240px;
+
+      text-align: left;
+
+      @include sm {
+        align-items: center;
+
+        width: 100%;
+        padding-bottom: 10px;
+
         text-align: center;
+      }
+      @include md {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
 
-        &__title {
-            @extend %title-section;
+        width: 100%;
+        padding-bottom: 10px;
+
+        text-align: center;
+      }
+
+      &-item {
+        position: relative;
+
+        padding: 0 $gap * 1.5;
+
+        @include sm {
+          width: 100%;
+          margin: 20px auto;
+          padding: 0 0;
+        }
+        @include md {
+          width: 190px;
+          margin: 0 auto;
+          padding: 0 0;
         }
 
-        &__subtitle {
-            @include sm {
-                font-size: .875rem;
-            }
+        &:not(:first-child) {
+          margin: 30px 0;
+
+          @include md {
+            margin: 15px 0;
+          }
         }
+
+        h3 {
+          padding-bottom: $gap + 5;
+
+          text-transform: uppercase;
+
+          font-size: 0.875rem;
+
+          @include md {
+            padding-bottom: $gap;
+
+            font-size: 0.775rem;
+          }
+        }
+
+        p {
+          font-size: 0.75rem;
+          line-height: 1.6rem;
+
+          @include md {
+            font-size: 0.675rem;
+            line-height: 1.4rem;
+          }
+        }
+      }
     }
 
-    &-block {
-        display: flex;
-        justify-content: center;
-        padding-top: $gap * 5;
+    &__icon {
+      position: absolute;
+      top: -3px;
+      left: -$gap * 8.5;
 
-        @include lg-md {
-            justify-content: center;
-        }
+      width: 100%;
+      height: 100%;
+
+      text-align: center;
+
+      font-size: 1.2rem;
+
+      @include md {
+        top: -$gap * 2;
+        left: 0;
+      }
+    }
+  }
+
+  &-form {
+    &__container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+
+      width: 730px;
+
+      @include md {
+        flex-direction: column;
+
+        width: 100%;
+      }
+      @include lg-md {
+        flex-direction: column;
+
+        width: 50%;
+      }
+    }
+
+    .form-input {
+      width: 350px;
+      height: 50px;
+      margin: 0 0 ($gap) 0;
+      padding: ($gap / 2);
+
+      transition: border-color 0.4s;
+
+      border: 1.2px solid darken($color-main-dark, 45);
+      border-radius: 0;
+      outline: none;
+      box-shadow: none;
+
+      appearance: none;
+      @include md {
+        width: 100%;
+      }
+      @include lg-md {
+        width: 300px;
+      }
+
+      &:nth-of-type(5) {
+        width: 100%;
+        height: 150px;
 
         @include md {
-            justify-content: center;
-            flex-direction: column;
+          width: 100%;
+        }
+        @include lg-md {
+          width: 300px;
         }
 
-        &__information {
-            text-align: left;
-            width: 240px;
-
-            @include md {
-                display: flex;
-                flex-wrap: wrap;
-                align-items: center;
-                text-align: center;
-                width: 100%;
-                padding-bottom: 10px;
-            }
-
-            @include sm {
-                align-items: center;
-                text-align: center;
-                width: 100%;
-                padding-bottom: 10px;
-            }
-
-            &-item {
-                padding: 0 $gap * 1.5;
-                position: relative;
-
-                @include md {
-                    width: 190px;
-                    padding: 0 0;
-                    margin: 0 auto;
-                }
-
-                @include sm {
-                    width: 100%;
-                    padding: 0 0;
-                    margin: 20px auto;
-                }
-
-                &:not(:first-child) {
-                    margin: 30px 0;
-
-                    @include md {
-                        margin: 15px 0;
-                    }
-                }
-
-                h3 {
-                    text-transform: uppercase;
-                    padding-bottom: $gap + 5;
-                    font-size: .875rem;
-
-                    @include md {
-                        padding-bottom: $gap;
-                        font-size: .775rem;
-                    }
-                }
-
-                p {
-                    line-height: 1.6rem;
-                    font-size: .75rem;
-
-                    @include md {
-                        line-height: 1.4rem;
-                        font-size: .675rem;
-                    }
-                }
-            }
+        &::placeholder {
+          transform: translateY(-45px);
         }
+      }
 
-        &__icon {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            text-align: center;
-            top: -3px;
-            left: -$gap * 8.5;
-            font-size: 1.2rem;
+      &:hover,
+      &:focus {
+        border-color: $color-accent;
+      }
 
-            @include md {
-                top: -$gap * 2;
-                left: 0;
-            }
+      &:focus {
+        &::placeholder {
+          opacity: 0;
         }
+      }
+
+      &::placeholder {
+        transition: opacity 0.4s;
+        text-transform: uppercase;
+
+        font-size: 0.75rem;
+      }
     }
 
-    &-form {
-        &__container {
-            width: 730px;
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
+    .form-submit {
+      width: 180px;
+      height: 50px;
+      margin-left: 0;
+      padding: 0 ($gap * 3);
 
-            @include lg-md {
-                width: 50%;
-                flex-direction: column;
-            }
+      transition: background-color 0.4s, color 0.4s;
+      text-transform: uppercase;
 
-            @include md {
-                width: 100%;
-                flex-direction: column;
-            }
-        }
+      border: 1.2px solid darken($color-main-dark, 45);
+      border-radius: 0;
+      outline: none;
+      background-color: transparent;
 
-        .form-input {
-            padding: ($gap / 2);
-            width: 350px;
-            height: 50px;
-            margin: 0 0 ($gap) 0;
-            border: 1.2px solid darken($color-main-dark, 45);
-            transition: border-color .4s;
-            outline: none;
-            box-shadow: none;
-            appearance: none;
-            border-radius: 0px;
+      appearance: none;
+      @include lg-md {
+        width: 180px;
+      }
 
-            @include lg-md {
-                width: 300px;
-            }
+      &:hover {
+        color: $color-main;
+        background-color: $color-accent;
+      }
 
-            @include md {
-                width: 100%;
-            }
-
-            &:nth-of-type(5) {
-                width: 100%;
-                height: 150px;
-
-                @include lg-md {
-                    width: 300px;
-                }
-
-                @include md {
-                    width: 100%;
-                }
-
-                &::placeholder {
-                    transform: translateY(-45px);
-                }
-            }
-
-            &:hover,
-            &:focus {
-                border-color: $color-accent;
-            }
-
-            &:focus {
-                &::placeholder {
-                    opacity: 0;
-                }
-            }
-
-            &::placeholder {
-                text-transform: uppercase;
-                font-size: .75rem;
-                transition: opacity .4s;
-            }
-
-        }
-
-        .form-submit {
-            width: 180px;
-            height: 50px;
-            appearance: none;
-            padding: 0 ($gap * 3);
-            margin-left: 0;
-            background-color: transparent;
-            outline: none;
-            border-radius: 0px;
-            text-transform: uppercase;
-            border: 1.2px solid darken($color-main-dark, 45);
-            transition: background-color .4s, color .4s;
-
-            @include lg-md {
-                width: 180px;
-            }
-
-            &:hover {
-                background-color: $color-accent;
-                color: $color-main;
-            }
-
-            &:focus {
-                box-shadow: inset 1px 0px 3px 2px $color-main-dark;
-            }
-        }
+      &:focus {
+        box-shadow: inset 1px 0 3px 2px $color-main-dark;
+      }
     }
+  }
 }
