--- a/assets/scss/sections/_services.scss
+++ b/assets/scss/sections/_services.scss
@@ -1,88 +1,97 @@
 .services {
-    background-color: $color-main;
-    h4{
-        display: none;
-    }
-    &-content {
-        @extend %section;
-        text-align: center;
+  background-color: $color-main;
+  h4 {
+    display: none;
+  }
+  &-content {
+    text-align: center;
 
-        &__title {
-            @extend %title-section;
-        }
+    @extend %section;
 
-        &__subtitle {
-            font-weight:400;
+    &__title {
+      @extend %title-section;
+    }
+
+    &__subtitle {
+      font-weight: 400;
+    }
+  }
+  &-block {
+    display: flex;
+
+    padding-top: 70px;
+
+    @include xx {
+      flex-wrap: wrap;
+    }
+    @include sm {
+      flex-wrap: wrap;
+    }
+    @include md {
+      flex-wrap: wrap;
+    }
+  }
+  &-item {
+    padding: 0 ($gap / 2);
+
+    @include md {
+      width: 100%;
+    }
+
+
+    &:hover {
+      .services-item__icon {
+        &::after {
+          background-color: $color-accent;
         }
-    }
-    &-block{
-        display: flex;
-        padding-top: 70px;
-      
-       @include md {
-       flex-wrap: wrap;
-     }
-     @include sm {
-        flex-wrap: wrap;
+        i {
+          z-index: 2;
+
+          color: $color-main;
+        }
       }
-      @include xx {
-        flex-wrap: wrap;
-      }
-       }
-     &-item{
-         padding: 0 ($gap / 2);
-         
-         @include md {
-            width: 100%;
-          }
-         
-         
-         &:hover{
-            .services-item__icon{
-                &::after{
-                    background-color: $color-accent;
-                }
-                i{
-                    color: $color-main;
-                    z-index: 2;
-                } 
-              }
     }
-         
-        &__icon{
-            width: 100%;
-            height: 100px;
-           display: flex;
-           position: relative;
-           justify-content: center;
-           align-items: center;
-       transition: after 3s;
-    &::after{
-        content: "";
+
+    &__icon {
+      position: relative;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      width: 100%;
+      height: 100px;
+
+      transition: after 3s;
+      &::after {
         position: absolute;
+
         width: 75px;
         height: 75px;
+
+        content: "";
+        transition: background-color 0.5s;
+
         border: 2px solid darken($color-main-dark, 5);
         border-radius: 50%;
-        transition: background-color .5s;
+      }
+      i {
+        transition: color 0.3s;
+
+        color: $color-accent;
+
+        font-size: 2.7rem;
+      }
     }
-       i{
-           font-size: 2.7rem;
-           color: $color-accent;
-           transition: color .3s;
-       }
-     
-     }
-     h3{
-       line-height: 4rem;
-         font-size: 0.875rem;
-         text-transform: uppercase;
-     }
-     p{
-        font-size: 0.875rem;
-        line-height: 1.7rem;
-     }
-    
-     }
-     
+    h3 {
+      text-transform: uppercase;
+
+      font-size: 0.875rem;
+      line-height: 4rem;
+    }
+    p {
+      font-size: 0.875rem;
+      line-height: 1.7rem;
+    }
+  }
 }
