--- a/assets/scss/sections/_works.scss
+++ b/assets/scss/sections/_works.scss
@@ -1,217 +1,245 @@
 .work {
-    background-color: $color-main;
+  background-color: $color-main;
 
-    h4 {
-        display: none;
+  h4 {
+    display: none;
+  }
+
+  &-content {
+    @extend %section;
+
+    &__title {
+      @extend %title-section;
+    }
+  }
+
+  &-categories {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    padding-top: $gap * 3;
+
+    @include sm {
+      padding-top: $gap;
+
+      font-size: 0.875rem;
     }
 
-    &-content {
-        @extend %section;
 
-        &__title {
-            @extend %title-section;
+    &__item {
+      position: relative;
+
+      padding: 0 $gap;
+
+      font-family: $font-main;
+
+      @include sm {
+        padding: 0 $gap / 3;
+      }
+
+
+
+      &:hover {
+        &::after {
+          width: 100%;
         }
+      }
+
+      &::after {
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+
+        width: 0;
+        height: 3px;
+
+        content: "";
+        transition: width 0.4s;
+
+        background-color: $color-accent;
+      }
+
+      a {
+        color: $color-text;
+      }
     }
 
-    &-categories {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        padding-top: $gap * 3;
-
-        @include sm {
-           font-size: .875rem;
-           padding-top: $gap;
-        }
-        
-
-        &__item {
-            padding: 0 $gap;
-            font-family: $font-main;
-            position: relative;
-           
-            @include sm {
-                padding: 0 $gap / 3;
-             }
-             
-                
-             
-            &:hover {
-                &::after {
-                    width: 100%;
-                }
-            }
-
-            &::after {
-                content: "";
-                position: absolute;
-                width: 0;
-                height: 3px;
-                background-color: $color-accent;
-                bottom: -5px;
-                left: 0;
-                transition: width .4s;
-            }
-
-            a {
-                color: $color-text;
-            }
-        }
-
-        .active {
-            color: $color-accent;
-        }
+    .active {
+      color: $color-accent;
     }
+  }
 
-    &-images {
-        padding-top: $gap * 5;
-        display: flex;
-        flex-wrap: wrap;
-        @include sm {
-            padding-top: $gap * 3;
-        }
-        &__wrap {
-            position: relative;
-            height: 100%;
+  &-images {
+    display: flex;
+    flex-wrap: wrap;
 
-            &:hover {
-                .work-images__overlay {
-                    left: 0;
-                    width: 100%;
-                    background-color: rgba($color-accent, .7);
-                    z-index: 99;
-                }
+    padding-top: $gap * 5;
 
-                .work-images__caption {
-                    opacity: 1;
-                    top: 95px;
-                    transition-delay: .5s;
+    @include sm {
+      padding-top: $gap * 3;
+    }
+    &__wrap {
+      position: relative;
 
-                    @include xl {
-                        left: 50%;
-                        transform: translate(-50%, 0);
-                    }
+      height: 100%;
 
-                    @include lg {
-                        top: 30px;
-                        left: 50%;
-                        transform: translate(-50%, 0);
-                    }
+      &:hover {
+        .work-images__overlay {
+          z-index: 99;
+          left: 0;
 
-                    @include sm {
-                        left: 50%;
-                        transform: translate(-50%, 0);
-                    }
-                }
-            }
+          width: 100%;
+
+          background-color: rgba($color-accent, 0.7);
         }
 
-        &__item {
-            cursor: pointer;
-            padding: 5px;
+        .work-images__caption {
+          top: 95px;
 
-            img {
-                display: block;
-                width: 100%;
-                height: 100%;
-            }
+          transition-delay: 0.5s;
 
-            @include xl {
-                margin-bottom: $gap / 3;
-                flex: 0 0 33.333%;
-            }
+          opacity: 1;
 
-            @include md {
-                margin-bottom: $gap / 3;
-                flex: 0 0 50%;
-                &:nth-child(9){
-                    margin: 0 auto;
-                }
-            }
-
-            @include sm {
-                margin-bottom: $gap / 3;
-                flex: 0 0 100%;
-            }
-        }
-
-        &__overlay {
-            position: absolute;
-            top: 0;
+          @include sm {
             left: 50%;
-            width: 0;
-            height: 100%;
-            transition: background-color .5s, left .5s, width .5s;
 
+            transform: translate(-50%, 0);
+          }
+          @include lg {
+            top: 30px;
+            left: 50%;
+
+            transform: translate(-50%, 0);
+          }
+          @include xl {
+            left: 50%;
+
+            transform: translate(-50%, 0);
+          }
         }
-
-        &__caption {
-            position: absolute;
-            top: 0;
-            left: 125px;
-            z-index: 100;
-            opacity: 0;
-            text-align: center;
-            transition: opacity .3s, top .6s;
-
-
-            h3 {
-                font-size: 1.125rem;
-                color: $color-main;
-                letter-spacing: .7px;
-                line-height: 2.4rem;
-
-                @include lg {
-                    line-height: 1.8rem;
-                }
-            }
-
-            p {
-                color: $color-main;
-            }
-
-            &-button {
-                font-family: $font-main;
-                font-size: 0.875rem;
-                margin: 30px auto;
-                width: 100px;
-                height: 38px;
-                border: 2px solid $color-main-dark;
-                padding: 9px 0;
-                transition: background-color .4s;
-
-                @include lg {
-                    width: 90px;
-                    height: 28px;
-                    padding: 3px 0;
-                }
-
-                &:hover {
-                    background-color: $color-main;
-
-                    a {
-                        color: $color-accent;
-                    }
-                }
-
-                a {
-                    transition: color .4s;
-                    padding: 9px 20px;
-
-                    @include lg {
-                        padding: 5px 10px;
-                    }
-                }
-
-                i {
-                    margin-left: 5px;
-                    transform: rotate(90deg);
-
-                    @include lg {
-                        font-size: .845rem;
-                    }
-                }
-            }
-        }
+      }
     }
+
+    &__item {
+      padding: 5px;
+
+      cursor: pointer;
+
+      @include sm {
+        flex: 0 0 100%;
+
+        margin-bottom: $gap / 3;
+      }
+      @include md {
+        flex: 0 0 50%;
+
+        margin-bottom: $gap / 3;
+        &:nth-child(9) {
+          margin: 0 auto;
+        }
+      }
+      @include xl {
+        flex: 0 0 33.333%;
+
+        margin-bottom: $gap / 3;
+      }
+
+      img {
+        display: block;
+
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    &__overlay {
+      position: absolute;
+      top: 0;
+      left: 50%;
+
+      width: 0;
+      height: 100%;
+
+      transition: background-color 0.5s, left 0.5s, width 0.5s;
+    }
+
+    &__caption {
+      position: absolute;
+      z-index: 100;
+      top: 0;
+      left: 125px;
+
+      transition: opacity 0.3s, top 0.6s;
+      text-align: center;
+
+      opacity: 0;
+
+
+      h3 {
+        letter-spacing: 0.7px;
+
+        color: $color-main;
+
+        font-size: 1.125rem;
+        line-height: 2.4rem;
+
+        @include lg {
+          line-height: 1.8rem;
+        }
+      }
+
+      p {
+        color: $color-main;
+      }
+
+      &-button {
+        width: 100px;
+        height: 38px;
+        margin: 30px auto;
+        padding: 9px 0;
+
+        transition: background-color 0.4s;
+
+        border: 2px solid $color-main-dark;
+
+        font-family: $font-main;
+        font-size: 0.875rem;
+
+        @include lg {
+          width: 90px;
+          height: 28px;
+          padding: 3px 0;
+        }
+
+        &:hover {
+          background-color: $color-main;
+
+          a {
+            color: $color-accent;
+          }
+        }
+
+        a {
+          padding: 9px 20px;
+
+          transition: color 0.4s;
+
+          @include lg {
+            padding: 5px 10px;
+          }
+        }
+
+        i {
+          margin-left: 5px;
+
+          transform: rotate(90deg);
+
+          @include lg {
+            font-size: 0.845rem;
+          }
+        }
+      }
+    }
+  }
 }
